Resolve homepage logo link alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2302,60 +2302,49 @@ section.page { padding: 1em; }
 @media (max-width: 768px) { #menu-divider { width: 40%; } }
 
 div.logo_map {
-  position: relative;
-  margin: auto;
+  margin: auto 9vw;
+  display: grid;
+  grid-template-columns: 40vw 40vw;
+  grid-gap: 5px;
 }
-div.logo_map > img {
-  display: block;
-  max-width: 100%;
-  margin: 0 auto;
-}
-div.logo_map > a {
-  display: block;
-  position: absolute;
-}
-div.logo_map > a:hover {
-  background-color: rgba(255, 0, 0, .0);
-}
+
 div.logo_map > a.sshrc {
-  top: 0%;
-  left: 20%;
-  width: 60%;
-  height: 25%;
+  grid-area: 1/1/2/3;
 }
+
 div.logo_map > a.mcgill {
-  top: 20%;
-  left: 20%;
-  width: 34%;
-  height: 25%;
+  grid-area: 2/1/3/2
 }
+
 div.logo_map > a.ddmal {
-  top: 20%;
-  left: 54%;
-  width: 26%;
-  height: 25%;
+  grid-area: 2/2/3/3
 }
+
 div.logo_map > a.cirmmt {
-  top: 40%;
-  left: 20%;
-  width: 34%;
-  height: 25%;
+  grid-area: 3/1/4/2;
+  padding-top: 1.5vw;
 }
+
 div.logo_map > a.frqsc {
-  top: 40%;
-  left: 54%;
-  width: 26%;
-  height: 25%;
+  grid-area: 3/2/4/3
 }
-div.logo_map > a.alliancecan {
-  top: 70%;
-  left: 20%;
-  width: 34%;
-  height: 25%;
+
+div.logo_map > a.alliance {
+  grid-area: 4/1/5/2;
+  padding-top: 1.5vw;
 }
+
 div.logo_map > a.calculquebec {
-  top: 70%;
-  left: 54%;
-  width: 26%;
-  height: 25%;
+  grid-area: 4/2/5/3
 }
+
+div.logo_map > a.logo > img {
+  max-width: 40vw;
+  max-height: 8vw;
+}
+
+div.logo_map > a.wide-logo > img {
+  max-width: 80vw;
+  max-height: 8vw;
+}
+
